This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
11/20/25: Made it request insertion only once for Gatan cameras and then wait
until inserted; repeated requests wasted time and caused timeouts with K3.

11/20/25: Fixed SEMCCD plugin crashing DM when first saved raw images from K3
are binned by 2 and from a subarea (In 4.2).

11/20/25: Fixed finishing focus ramp for TVIPS STEM, and requesting more than
one channel in continuous mode for FEI STEM through UTAPI (In 4.2).

11/14/25: Fixed adding grid of point "like last time" not setting items as
Acquire (In 4.2).

11/14/24: Added support for Tietz XF216 camera (In 4.2).

11/14/24: Made Shift to Marker work with groups collapsed if current point is
the only one in the group (In 4.2).

11/13/25: Added script command to get JEOL aperture sizes for a given aperture
index.

11/12/25: SEM_4-3-0beta2
11/12/25: Added EDM dose percentage to imaging states.

11/11/25: Added property to set magnification below which "autofocus" will set
standard focus instead of autofocusing, even when calibrated.

11/11/25: Implemented frame saving and aligning for JEOL cameras.

11/11/25: SEM_4-2-12
11/11/25: Fixed ability to enter -1 for compression options to SetFileOptions
(In 4.2).

11/11/25: Fixed crash if camera plugin cannot load, broken 10/13/25. (In 4.2).

11/9/25: Added the ability to take subareas of arbitrary size and centering
from Falcon and Ceta cameras.  Binning 8 now works on all Falcons and can be
added to the camera properties.

11/7/25: Fixed camera setup to show only 3 size buttons for Ceta (In 4.2).

11/6/25: Added buttons to scope control panel to adjust EDM dose percentage if
there is an EDM.

11/6/25: Added an optional argument to SetDoseRate script command which is a 